--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
         <section class="main_section">
             <div class="container container_grid d-flex flex-wrap p-5">
                 <div class="cells d-flex flex-wrap text-dark">
-
                 </div>
             </div>
-
         </section>
     </main>
 
+    <footer class="text-center mt-3
+    ">
+        <div>made with &hearts; Boolean</div>
+    </footer>
 
 
 
