--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1 class="d-inline ">Campo Minato</h1>
                 </a>
                 <div class="d-flex align-items-center">
-                    <label for="difficoltà" class="me-2">Difficoltà</label>
+                    <label for="difficult" class="me-2">Difficoltà</label>
                     <form class=" d-flex me-2">
                         <select name="" id="select_box">
                             <option value="facile">Facile</option>
